comments and publications details pages fixed handler and refreh