@@ -1,11 +1,11 @@
 package com.erich.blog.app.services.impl;
 
 import com.erich.blog.app.dto.PublicarDto;
+import com.erich.blog.app.dto.response.PublicationWithPaginatedResponse;
 import com.erich.blog.app.entity.Categoria;
 import com.erich.blog.app.entity.Publicar;
 import com.erich.blog.app.exception.BadRequestException;
-import com.erich.blog.app.exception.CategoriaNotFoundException;
-import com.erich.blog.app.exception.PublicacionNotFoundException;
+import com.erich.blog.app.exception.NotFoundException;
 import com.erich.blog.app.repository.CategoriaRepo;
 import com.erich.blog.app.repository.PublicarRepo;
 import com.erich.blog.app.services.PublicarService;
@@ -14,6 +14,9 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.Resource;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.util.Streamable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -21,6 +24,8 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -32,9 +37,10 @@ public class PublicarServiceImpl implements PublicarService {
     private final CategoriaRepo categoriaRepo;
 
     @Override
+    @Transactional
     public PublicarDto save(PublicarDto publicarDto) {
 
-        Categoria categoria = categoriaRepo.findById(publicarDto.getCategoria().getId()).orElseThrow(() -> new CategoriaNotFoundException("Categoria id no encontrado"));
+        Categoria categoria = categoriaRepo.findById(publicarDto.getCategoria().getId()).orElseThrow(() -> new NotFoundException("Categoria id no encontrado"));
         Publicar publicar = PublicarDto.toEntity(publicarDto);
         if (publicar != null) {
             publicar.setCategoria(categoria);
@@ -45,6 +51,7 @@ public class PublicarServiceImpl implements PublicarService {
 
 
     @Override
+    @Transactional(readOnly = true)
     public List<PublicarDto> findAll() {
         return Streamable.of(publicarRepo.findAll())
                 .stream().map(PublicarDto::fromEntity).toList();
@@ -52,19 +59,21 @@ public class PublicarServiceImpl implements PublicarService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public PublicarDto findById(Long id) {
         if (id == null) {
             log.error("id es null");
             return null;
         }
-        return publicarRepo.findById(id).map(PublicarDto::fromEntity).orElseThrow(() -> new PublicacionNotFoundException("Upps, No se encontro el id : " + id + " en la db"));
+        return publicarRepo.findById(id).map(PublicarDto::fromEntity).orElseThrow(() -> new NotFoundException("Upps, No se encontro el id : " + id + " en la db"));
     }
 
     @Override
+    @Transactional
     public PublicarDto update(PublicarDto publicarDto, Long id) {
-        Categoria categoria = categoriaRepo.findById(publicarDto.getCategoria().getId()).orElseThrow(() -> new CategoriaNotFoundException("Categoria id no encontrado"));
+        Categoria categoria = categoriaRepo.findById(publicarDto.getCategoria().getId()).orElseThrow(() -> new NotFoundException("Categoria id no encontrado"));
         if (!publicarRepo.existsById(id)) {
-            throw new PublicacionNotFoundException("No se encontro el id : " + id);
+            throw new NotFoundException("No se encontro el id : " + id);
         }
         return publicarRepo.findById(id).map(x -> {
             x.setTitulo(publicarDto.getTitulo());
@@ -95,7 +104,7 @@ public class PublicarServiceImpl implements PublicarService {
     public PublicarDto updateWithPhoto(PublicarDto publicarDto, Long id, MultipartFile file) {
        // Categoria categoria = categoriaRepo.findById(publicarDto.getCategoria().getId()).orElseThrow(() -> new CategoriaNotFoundException("Categoria id no encontrado"));
         if (!publicarRepo.existsById(id)) {
-            throw new PublicacionNotFoundException("No se encontro el id : " + id);
+            throw new NotFoundException("No se encontro el id : " + id);
         }
         return publicarRepo.findById(id).map(p -> {
             p.setTitulo(publicarDto.getTitulo());
@@ -116,19 +125,19 @@ public class PublicarServiceImpl implements PublicarService {
 
     @Override
     public Resource viewPhoto(Long id) {
-        Publicar publicar = publicarRepo.findById(id).orElseThrow(() -> new PublicacionNotFoundException("No se encontro el id " + id + " con su foto"));
+        Publicar publicar = publicarRepo.findById(id).orElseThrow(() -> new NotFoundException("No se encontro el id " + id + " con su foto"));
         return new ByteArrayResource(ImageUtil.decompressImage(publicar.getPhoto()));
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<PublicarDto> getPublicacionesByCategoriaId(Long categId) {
-        Categoria categoriaId = categoriaRepo.findById(categId).orElseThrow(() -> new CategoriaNotFoundException("Categoria id " + categId + " no encontrado"));
-        return Streamable.of(publicarRepo.findByCategoriaId(categoriaId.getId()))
-                .stream()
-                .map(PublicarDto::fromEntity)
-                .toList();
-
+    public PublicationWithPaginatedResponse getAllPublicacionesByCategoriaId(Long categId , int page, int size) {
+        Categoria categoriaId = categoriaRepo.findById(categId).orElseThrow(() -> new NotFoundException("Categoria id " + categId + " no encontrado"));
+        Pageable paging = PageRequest.of(page, size);
+        Page<Publicar>  pageP = publicarRepo.findByCategoriaId(categoriaId.getId(),paging);
+        List<PublicarDto>  publicarDtos = pageP.getContent().stream().map(PublicarDto::fromEntity).collect(Collectors.toList());
+        Map<String,Object> maps = Map.of("pageNumber",pageP.getNumber(), "totalPages", pageP.getTotalPages(),"totalPublications",pageP.getTotalElements());
+        return new PublicationWithPaginatedResponse(publicarDtos,maps);
     }
 
     @Override
